--- a/.github/workflows/iac.yml
+++ b/.github/workflows/iac.yml
@@ -8,6 +8,7 @@ on:
       - iac-gitops
     paths:  
       - terraform/**
+  workflow_dispatch: # Enables manual trigger for the workflow
 
 # Environment Variables
 env:
@@ -15,9 +16,9 @@ env:
   AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
   AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
   # S3 Bucket for Terraform State
-  BUCKET_TF_STATE: ${{ secrets.BUCKET_TF_STATE }}
-  AWS_REGION: us-east-2
-  EKS_CLUSTER: vprofile-eks
+  S3_BUCKET: ${{ secrets.BUCKET }}
+  AWS_REGION: ${{ vars.AWS_REGION }}
+  EKS_CLUSTER: ${{ vars.EKS_CLUSTER }}
 
 # Define Jobs
 jobs:
@@ -25,69 +26,82 @@ jobs:
     name: "Deploy Infra with Terraform on AWS"
     runs-on: ubuntu-latest
 
-    # Default settings for the job
     defaults:
       run:
         shell: bash
         working-directory: ./terraform
 
-    # Steps in the job
     steps:
-      # Step 1: Checkout Source Code
       - name: Checkout source code
         uses: actions/checkout@v4
 
-      # Step 2: Setup Terraform
       - name: Setup Terraform
-        uses: hashicorp/setup-terraform@v2
+        uses: hashicorp/setup-terraform@v3
 
-      # Step 3: Terraform Init
       - name: Terraform init
         id: init
-        run: terraform init -backend-config="bucket=$BUCKET_TF_STATE"
+        run: terraform init -backend-config="bucket=$S3_BUCKET"
 
-      # Step 4: Terraform Format Check
       - name: Terraform format
         id: fmt
         run: terraform fmt -check
 
-      # Step 5: Terraform Validate
       - name: Terraform validate
         id: validate
         run: terraform validate
 
-      # Step 6: Terraform Plan
       - name: Terraform plan
         id: plan
         run: terraform plan -no-color -input=false -out planfile
         continue-on-error: true
 
-      # Step 7: Check Terraform Plan Status
       - name: Terraform plan status
         if: steps.plan.outcome == 'failure'
         run: exit 1
 
-      # Step 8: Terraform Apply
       - name: Terraform apply
         id: apply
-        if: github.ref == 'refs/heads/main' && github.event_name == 'push'
         run: terraform apply -auto-approve -input=false -parallelism=1 planfile
 
-      # Step 9: Configure AWS Credentials
       - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v1
+        uses: aws-actions/configure-aws-credentials@v4
         with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-access-key-id: ${{ env.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ env.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ env.AWS_REGION }}
 
-      # Step 10: Get Kubernetes Config File
       - name: Get Kubernetes config
         id: getconfig
         if: steps.apply.outcome == 'success'
-        run: aws eks update-kubeconfig --region ${{ env.AWS_REGION }} --name ${{ env.EKS_CLUSTER }}
+        run: aws eks update-kubeconfig --name ${{ env.EKS_CLUSTER }} --region ${{ env.AWS_REGION }} 
 
-      # Step 11: Install NGINX Ingress Controller
       - name: Install Ingress controller
         if: steps.apply.outcome == 'success' && steps.getconfig.outcome == 'success'
-        run: kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/controller-v1.1.3/deploy/static/provider/aws/deploy.yaml
+        run: kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/controller-v1.12.0-beta.0/deploy/static/provider/aws/deploy.yaml
+
+  destroy:
+    name: "Destroy Infra on AWS"
+    runs-on: ubuntu-latest
+
+    # Add manual trigger
+    if: github.event_name == 'workflow_dispatch'
+
+    defaults:
+      run:
+        shell: bash
+        working-directory: ./terraform
+
+    steps:
+      - name: Checkout source code
+        uses: actions/checkout@v4
+
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v3
+
+      - name: Terraform init
+        id: init
+        run: terraform init -backend-config="bucket=$S3_BUCKET"
+
+      - name: Terraform destroy
+        id: destroy
+        run: terraform destroy -auto-approve -input=false
