--- a/.github/workflows/iac.yml
+++ b/.github/workflows/iac.yml
@@ -23,6 +23,8 @@ jobs:
   terraform:
     name: "Deploy Infra with Terraform on AWS"
     runs-on: ubuntu-latest
+    # Run only on push events
+    if: github.event_name == 'push'  
 
     defaults:
       run:
@@ -72,18 +74,17 @@ jobs:
       - name: Install Ingress controller
         if: steps.apply.outcome == 'success' && steps.getconfig.outcome == 'success'
         run: kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/controller-v1.12.0-beta.0/deploy/static/provider/aws/deploy.yaml
-
+  
   destroy:
     name: "Destroy Infra on AWS"
     runs-on: ubuntu-latest
+    # Only trigger for workflow_dispatch
+    if: github.event_name == 'workflow_dispatch'
 
     defaults:
       run:
         shell: bash
         working-directory: ./terraform
-
-    # Only trigger for workflow_dispatch
-    if: github.event_name == 'workflow_dispatch'
 
     steps:
       - name: Checkout source code
@@ -110,6 +111,17 @@ jobs:
       - name: Delete Ingress controller
         run: kubectl delete -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/controller-v1.12.0-beta.0/deploy/static/provider/aws/deploy.yaml
 
+      - name: Empty ECR Repository
+        run: |
+          REPOSITORY_NAME=${{ vars.ECR_REPO }}
+          IMAGES=$(aws ecr list-images --repository-name $REPOSITORY_NAME --query 'imageIds[*]' --output json)
+          if [[ "$IMAGES" != "[]" ]]; then
+            echo "Deleting images from $REPOSITORY_NAME..."
+            aws ecr batch-delete-image --repository-name $REPOSITORY_NAME --image-ids "$IMAGES"
+          else
+            echo "No images found in $REPOSITORY_NAME."
+          fi
+      
       - name: Terraform destroy
         id: destroy
         run: terraform destroy -auto-approve -input=false
